--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-mentions",
-  "version": "1.0.1",
+  "version": "1.0.4",
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0",
     "@angular/core": "^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0"
