--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-mentions",
   "description": "Mentions component for Angular.",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "license": "MIT",
   "author": "Abhijit Chikane",
   "repository": {
@@ -10,6 +10,7 @@
   },
   "homepage": "",
   "keywords": [
+    "angular-mentions",
     "angular",
     "javascript",
     "typescript",
