--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.13",
+    "@angular-devkit/build-ng-packagr": "~0.901.13",
     "@angular/cli": "~9.1.13",
     "@angular/compiler-cli": "~9.1.13",
     "@types/node": "^12.11.1",
+    "ng-packagr": "^9.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
