--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mentions",
-  "version": "10.0.0",
+  "version": "10.0.1",
   "description": "Mentions component for Angular.",
   "license": "MIT",
   "author": "Abhijit Chikane",
@@ -20,8 +20,8 @@
     "autocomplete"
   ],
   "peerDependencies": {
-    "@angular/common": "^9.1.13 || >=10.0.0",
-    "@angular/core": "^9.1.13 || >=10.0.0"
+    "@angular/common": "~10.2.5 || >=11.0.0",
+    "@angular/core": "~10.2.5 || >=11.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
