--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -20,8 +20,8 @@
     "autocomplete"
   ],
   "peerDependencies": {
-    "@angular/common": "~12.2.17 || >=13.0.0",
-    "@angular/core": "~12.2.17 || >=13.0.0"
+    "@angular/common": ">=12.0.0",
+    "@angular/core": ">=12.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
