--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mentions",
-  "version": "11.0.6",
+  "version": "11.0.7",
   "description": "Mentions component for Angular.",
   "license": "MIT",
   "author": "Abhijit Chikane",
@@ -20,8 +20,8 @@
     "autocomplete"
   ],
   "peerDependencies": {
-    "@angular/common": "~11.2.14 || >=12.0.0",
-    "@angular/core": "~11.2.14 || >=12.0.0"
+    "@angular/common": ">=11.0.0",
+    "@angular/core": ">=11.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
