--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mentions",
-  "version": "15.0.1",
+  "version": "15.0.2",
   "description": "Mentions component for Angular.",
   "license": "MIT",
   "author": "Abhijit Chikane",
@@ -20,8 +20,8 @@
     "autocomplete"
   ],
   "peerDependencies": {
-    "@angular/common": "^15.2.9 || >=16.0.0",
-    "@angular/core": "^15.2.9 || >=16.0.0"
+    "@angular/common": ">=15.0.0",
+    "@angular/core": ">=15.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
