--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mentions",
-  "version": "16.0.5",
+  "version": "16.0.6",
   "description": "Mentions component for Angular.",
   "license": "MIT",
   "author": "Abhijit Chikane",
@@ -20,8 +20,8 @@
     "autocomplete"
   ],
   "peerDependencies": {
-    "@angular/common": "^16.0.0 || >=17.0.0",
-    "@angular/core": "^16.0.0 || >=17.0.0"
+    "@angular/common": ">=16.0.0",
+    "@angular/core": ">=16.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
