--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-lib": "ng build ngx-mentions --configuration production",
+    "publish-lib": "ng build ngx-mentions --configuration production && cd dist/ngx-mentions/ && npm publish",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
