--- a/projects/ngx-mentions/package.json
+++ b/projects/ngx-mentions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-mentions",
-  "version": "13.0.14",
+  "version": "13.1.0",
   "description": "Mentions component for Angular.",
   "license": "MIT",
   "author": "Abhijit Chikane",
@@ -11,11 +11,12 @@
   "homepage": "",
   "keywords": [
     "angular-mentions",
+    "ngx-mentions",
     "angular",
+    "mentions",
     "javascript",
     "typescript",
     "component",
-    "mentions",
     "input-highlight",
     "autocomplete"
   ],
