--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "build-lib": "ng build ngx-mentions --configuration production",
     "publish-lib": "ng build ngx-mentions --configuration production && cd dist/ngx-mentions/ && npm publish",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "ng build --configuration production --base-href https://abhijit-chikane.github.io/ngx-mentions/"
@@ -30,10 +32,24 @@
     "@angular-devkit/build-angular": "~12.2.18",
     "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.17",
+    "@types/jest": "^29.5.2",
     "@types/node": "^12.11.1",
+    "jest": "^29.5.0",
+    "jest-preset-angular": "^13.1.1",
     "ng-packagr": "^12.2.7",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupJest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "node_modules/",
+      "dist/"
+    ],
+    "coverageDirectory": "<rootDir>/coverage/ngx-mentions"
   }
 }
